--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-# Exclude the 2 private Pushover token files
+# Exclude the 3 private pnut.io and Pushover token files:
+pnut_app_token.txt
 pushover_app_token.txt
 pushover_user_token.txt
